--- a/tarot_app/delete_data.html
+++ b/tarot_app/delete_data.html
@@ -3,32 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <title>Yêu cầu xóa tài khoản - Ứng dụng Tarot App</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 1em;
+        }
+        #translate-btn {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            padding: 0.5em 1em;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-<h2>Xóa tài khoản người dùng - Tarot App</h2>
+<button id="translate-btn">Translate to English</button>
 
-<p>Chúng tôi, nhóm phát triển <strong>Tarot App</strong> (nhà phát triển: <strong>Phạm Tiến Thắng</strong>), cam kết bảo vệ quyền riêng tư và dữ liệu cá nhân của người dùng.</p>
+<h2 data-vi="Xóa tài khoản người dùng - Tarot App" data-en="Delete User Account - Tarot App">Xóa tài khoản người dùng - Tarot App</h2>
 
-<h3>1. Cách yêu cầu xóa tài khoản</h3>
-<p>Người dùng có thể xóa tài khoản theo một trong hai cách sau:</p>
+<p data-vi="Chúng tôi, nhóm phát triển Tarot App (nhà phát triển: Phạm Tiến Thắng), cam kết bảo vệ quyền riêng tư và dữ liệu cá nhân của người dùng."
+   data-en="We, the development team of Tarot App (developer: Phạm Tiến Thắng), are committed to protecting user privacy and personal data.">
+    Chúng tôi, nhóm phát triển <strong>Tarot App</strong> (nhà phát triển: <strong>Phạm Tiến Thắng</strong>), cam kết bảo vệ quyền riêng tư và dữ liệu cá nhân của người dùng.
+</p>
+
+<h3 data-vi="1. Cách yêu cầu xóa tài khoản" data-en="1. How to Request Account Deletion">1. Cách yêu cầu xóa tài khoản</h3>
+<p data-vi="Người dùng có thể xóa tài khoản theo một trong hai cách sau:"
+   data-en="Users can delete their account using one of the following two methods:">
+    Người dùng có thể xóa tài khoản theo một trong hai cách sau:
+</p>
 <ul>
-    <li><strong>Gửi email</strong> đến địa chỉ: <strong>meocungptt@gmail.com</strong> hoặc <strong>tarotwizard@gmail.com</strong> với tiêu đề <em>"Yêu cầu xóa tài khoản Tarot App"</em>.</li>
-    <li><strong>Thực hiện trực tiếp trong ứng dụng</strong>:
-        <br>Vào ứng dụng → Hồ sơ → Chọn nút "Xóa tài khoản" → Nhập mã yêu cầu → Xóa.
+    <li data-vi='Gửi email đến địa chỉ: meocungptt@gmail.com hoặc tarotwizard@gmail.com với tiêu đề "Yêu cầu xóa tài khoản Tarot App".'
+        data-en='Send an email to: meocungptt@gmail.com or tarotwizard@gmail.com with the subject "Account Deletion Request for Tarot App".'>
+        <strong>Gửi email</strong> đến địa chỉ: <strong>meocungptt@gmail.com</strong> hoặc <strong>tarotwizard@gmail.com</strong> với tiêu đề <em>"Yêu cầu xóa tài khoản Tarot App"</em>.
+    </li>
+    <li data-vi='Thực hiện trực tiếp trong ứng dụng: Vào ứng dụng → Hồ sơ → Chọn nút "Xóa tài khoản" → Nhập mã yêu cầu → Xóa.'
+        data-en='Do it directly in the app: Go to the app → Profile → Tap "Delete Account" → Enter request code → Confirm deletion.'>
+        <strong>Thực hiện trực tiếp trong ứng dụng</strong>: <br>Vào ứng dụng → Hồ sơ → Chọn nút "Xóa tài khoản" → Nhập mã yêu cầu → Xóa.
     </li>
 </ul>
 
-<h3>2. Dữ liệu sẽ bị xóa</h3>
+<h3 data-vi="2. Dữ liệu sẽ bị xóa" data-en="2. Data That Will Be Deleted">2. Dữ liệu sẽ bị xóa</h3>
 <ul>
-    <li>Thông tin đăng nhập (email hoặc ID tài khoản)</li>
-    <li>Lịch sử sử dụng ứng dụng</li>
-    <li>Các dữ liệu cá nhân do người dùng cung cấp</li>
+    <li data-vi="Thông tin đăng nhập (email hoặc ID tài khoản)"
+        data-en="Login information (email or account ID)">Thông tin đăng nhập (email hoặc ID tài khoản)</li>
+    <li data-vi="Lịch sử sử dụng ứng dụng"
+        data-en="App usage history">Lịch sử sử dụng ứng dụng</li>
+    <li data-vi="Các dữ liệu cá nhân do người dùng cung cấp"
+        data-en="Personal data provided by the user">Các dữ liệu cá nhân do người dùng cung cấp</li>
 </ul>
 
-<h3>3. Dữ liệu được giữ lại</h3>
-<p>Một số dữ liệu không định danh (ví dụ: thống kê tổng hợp, dữ liệu phân tích ẩn danh) có thể được lưu giữ cho mục đích cải thiện chất lượng dịch vụ. Những dữ liệu này không thể được dùng để xác định danh tính người dùng.</p>
+<h3 data-vi="3. Dữ liệu được giữ lại" data-en="3. Data That Will Be Retained">3. Dữ liệu được giữ lại</h3>
+<p data-vi="Một số dữ liệu không định danh (ví dụ: thống kê tổng hợp, dữ liệu phân tích ẩn danh) có thể được lưu giữ cho mục đích cải thiện chất lượng dịch vụ. Những dữ liệu này không thể được dùng để xác định danh tính người dùng."
+   data-en="Some non-identifiable data (e.g., aggregated statistics, anonymous analytics data) may be retained to improve service quality. This data cannot be used to identify the user.">
+    Một số dữ liệu không định danh (ví dụ: thống kê tổng hợp, dữ liệu phân tích ẩn danh) có thể được lưu giữ cho mục đích cải thiện chất lượng dịch vụ. Những dữ liệu này không thể được dùng để xác định danh tính người dùng.
+</p>
 
-<h3>4. Thời gian xử lý</h3>
-<p>Yêu cầu xóa tài khoản sẽ được xử lý trong vòng <strong>7 ngày làm việc</strong> kể từ khi nhận được yêu cầu qua email.</p>
+<h3 data-vi="4. Thời gian xử lý" data-en="4. Processing Time">4. Thời gian xử lý</h3>
+<p data-vi="Yêu cầu xóa tài khoản sẽ được xử lý trong vòng 7 ngày làm việc kể từ khi nhận được yêu cầu qua email."
+   data-en="Account deletion requests will be processed within 7 business days from the time the email request is received.">
+    Yêu cầu xóa tài khoản sẽ được xử lý trong vòng <strong>7 ngày làm việc</strong> kể từ khi nhận được yêu cầu qua email.
+</p>
+
+<script>
+        const btn = document.getElementById("translate-btn");
+        let isVietnamese = true;
+
+        btn.addEventListener("click", () => {
+            document.querySelectorAll("[data-vi]").forEach(el => {
+                el.innerHTML = isVietnamese ? el.getAttribute("data-en") : el.getAttribute("data-vi");
+            });
+            btn.textContent = isVietnamese ? "Dịch sang tiếng Việt" : "Translate to English";
+            isVietnamese = !isVietnamese;
+        });
+    </script>
 </body>
 </html>
