--- a/tarot_app/policy_tarot.html
+++ b/tarot_app/policy_tarot.html
@@ -4,17 +4,170 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width'>
     <title>Privacy Policy</title>
-    <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
+    <style>
+        body {
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            padding: 1em;
+            position: relative;
+        }
+        #translateButton {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            padding: 8px 12px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 999;
+        }
+    </style>
 </head>
 <body>
-<strong>Privacy Policy</strong><p>This privacy policy applies to the Bí ẩn tarot app (hereby referred to as "Application") for mobile devices that was created by Phạm Tiến Thắng (hereby referred to as "Service Provider") as an Ad Supported service. This service is intended for use "AS IS".</p><br><strong>Information Collection and Use</strong><p>The Application collects information when you download and use it. This information may include information such as </p><ul><li>Your device's Internet Protocol address (e.g. IP address)</li><li>The pages of the Application that you visit, the time and date of your visit, the time spent on those pages</li><li>The time spent on the Application</li><li>The operating system you use on your mobile device</li></ul><p></p><br><p>The Application does not gather precise information about the location of your mobile device.</p><div style="display: none;"><p>The Application collects your device's location, which helps the Service Provider determine your approximate geographical location and make use of in below ways:</p><ul><li>Geolocation Services: The Service Provider utilizes location data to provide features such as personalized content, relevant recommendations, and location-based services.</li><li>Analytics and Improvements: Aggregated and anonymized location data helps the Service Provider to analyze user behavior, identify trends, and improve the overall performance and functionality of the Application.</li><li>Third-Party Services: Periodically, the Service Provider may transmit anonymized location data to external services. These services assist them in enhancing the Application and optimizing their offerings.</li></ul></div><br><p>The Service Provider may use the information you provided to contact you from time to time to provide you with important information, required notices and marketing promotions.</p><br><p>For a better experience, while using the Application, the Service Provider may require you to provide us with certain personally identifiable information, including but not limited to email, full name, age, birthday, phone. The information that the Service Provider request will be retained by them and used as described in this privacy policy.</p><br><strong>Third Party Access</strong><p>Only aggregated, anonymized data is periodically transmitted to external services to aid the Service Provider in improving the Application and their service. The Service Provider may share your information with third parties in the ways that are described in this privacy statement.</p><div><br><p>Please note that the Application utilizes third-party services that have their own Privacy Policy about handling data. Below are the links to the Privacy Policy of the third-party service providers used by the Application:</p><ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noopener noreferrer">AdMob</a></li><li><a href="https://firebase.google.com/support/privacy" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div><br><p>The Service Provider may disclose User Provided and Automatically Collected Information:</p><ul><li>as required by law, such as to comply with a subpoena, or similar legal process;</li><li>when they believe in good faith that disclosure is necessary to protect their rights, protect your safety or the safety of others, investigate fraud, or respond to a government request;</li><li>with their trusted services providers who work on their behalf, do not have an independent use of the information we disclose to them, and have agreed to adhere to the rules set forth in this privacy statement.</li></ul><p></p><br><strong>Opt-Out Rights</strong><p>You can stop all collection of information by the Application easily by uninstalling it. You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network.</p><br><strong>Data Retention Policy</strong><p>The Service Provider will retain User Provided data for as long as you use the Application and for a reasonable time thereafter. If you'd like them to delete User Provided Data that you have provided via the Application, please contact them at tarotwizard7777@gmail.com and they will respond in a reasonable time.</p><br><strong>Children</strong><p>The Service Provider does not use the Application to knowingly solicit data from or market to children under the age of 13.</p><div><br><p>The Application does not address anyone under the age of 13.
-    The Service Provider does not knowingly collect personally
-    identifiable information from children under 13 years of age. In the case
-    the Service Provider discover that a child under 13 has provided
-    personal information, the Service Provider will immediately
-    delete this from their servers. If you are a parent or guardian
-    and you are aware that your child has provided us with
-    personal information, please contact the Service Provider (tarotwizard7777@gmail.com) so that
-    they will be able to take the necessary actions.</p></div><!----><br><strong>Security</strong><p>The Service Provider is concerned about safeguarding the confidentiality of your information. The Service Provider provides physical, electronic, and procedural safeguards to protect information the Service Provider processes and maintains.</p><br><strong>Changes</strong><p>This Privacy Policy may be updated from time to time for any reason. The Service Provider will notify you of any changes to the Privacy Policy by updating this page with the new Privacy Policy. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes.</p><br><p>This privacy policy is effective as of 2025-04-24</p><br><strong>Your Consent</strong><p>By using the Application, you are consenting to the processing of your information as set forth in this Privacy Policy now and as amended by us.</p><br><strong>Contact Us</strong><p>If you have any questions regarding privacy while using the Application, or have questions about the practices, please contact the Service Provider via email at tarotwizard7777@gmail.com.</p>
+<button id="translateButton">Dịch sang tiếng Việt</button>
+
+<div id="content-en">
+    <strong>Privacy Policy</strong>
+    <p>This privacy policy applies to the Bí ẩn tarot app (hereby referred to as "Application") for mobile devices that was created by Phạm Tiến Thắng (hereby referred to as "Service Provider") as an Ad Supported service. This service is intended for use "AS IS".</p><br>
+
+    <strong>Information Collection and Use</strong>
+    <p>The Application collects information when you download and use it. This information may include information such as </p>
+    <ul>
+        <li>Your device's Internet Protocol address (e.g. IP address)</li>
+        <li>The pages of the Application that you visit, the time and date of your visit, the time spent on those pages</li>
+        <li>The time spent on the Application</li>
+        <li>The operating system you use on your mobile device</li>
+    </ul>
+    <p>The Application does not gather precise information about the location of your mobile device.</p>
+
+    <p>The Service Provider may use the information you provided to contact you from time to time to provide you with important information, required notices and marketing promotions.</p>
+
+    <p>For a better experience, while using the Application, the Service Provider may require you to provide us with certain personally identifiable information, including but not limited to email, full name, age, birthday, phone. The information that the Service Provider request will be retained by them and used as described in this privacy policy.</p><br>
+
+    <strong>Third Party Access</strong>
+    <p>Only aggregated, anonymized data is periodically transmitted to external services to aid the Service Provider in improving the Application and their service. The Service Provider may share your information with third parties in the ways that are described in this privacy statement.</p>
+
+    <p>Please note that the Application utilizes third-party services that have their own Privacy Policy about handling data. Below are the links to the Privacy Policy of the third-party service providers used by the Application:</p>
+    <ul>
+        <li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li>
+        <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noopener noreferrer">AdMob</a></li>
+        <li><a href="https://firebase.google.com/support/privacy" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li>
+        <li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li>
+    </ul>
+
+    <p>The Service Provider may disclose User Provided and Automatically Collected Information:</p>
+    <ul>
+        <li>as required by law, such as to comply with a subpoena, or similar legal process;</li>
+        <li>when they believe in good faith that disclosure is necessary to protect their rights, protect your safety or the safety of others, investigate fraud, or respond to a government request;</li>
+        <li>with their trusted services providers who work on their behalf, do not have an independent use of the information we disclose to them, and have agreed to adhere to the rules set forth in this privacy statement.</li>
+    </ul><br>
+
+    <strong>Opt-Out Rights</strong>
+    <p>You can stop all collection of information by the Application easily by uninstalling it. You may use the standard uninstall processes as may be available as part of your mobile device or via the mobile application marketplace or network.</p><br>
+
+    <strong>Data Retention Policy</strong>
+    <p>The Service Provider will retain User Provided data for as long as you use the Application and for a reasonable time thereafter. If you'd like them to delete User Provided Data that you have provided via the Application, please contact them at tarotwizard7777@gmail.com and they will respond in a reasonable time.</p><br>
+
+    <strong>Children</strong>
+    <p>The Application does not address anyone under the age of 13.
+        The Service Provider does not knowingly collect personally identifiable information from children under 13 years of age. In the case the Service Provider discover that a child under 13 has provided personal information, the Service Provider will immediately delete this from their servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact the Service Provider (tarotwizard7777@gmail.com) so that they will be able to take the necessary actions.</p><br>
+
+    <strong>Security</strong>
+    <p>The Service Provider is concerned about safeguarding the confidentiality of your information. The Service Provider provides physical, electronic, and procedural safeguards to protect information the Service Provider processes and maintains.</p><br>
+
+    <strong>Changes</strong>
+    <p>This Privacy Policy may be updated from time to time for any reason. The Service Provider will notify you of any changes to the Privacy Policy by updating this page with the new Privacy Policy. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes.</p><br>
+
+    <p>This privacy policy is effective as of 2025-04-24</p><br>
+
+    <strong>Your Consent</strong>
+    <p>By using the Application, you are consenting to the processing of your information as set forth in this Privacy Policy now and as amended by us.</p><br>
+
+    <strong>Contact Us</strong>
+    <p>If you have any questions regarding privacy while using the Application, or have questions about the practices, please contact the Service Provider via email at tarotwizard7777@gmail.com.</p>
+</div>
+
+<div id="content-vi" style="display: none;">
+    <strong>Chính sách quyền riêng tư</strong>
+    <p>Chính sách quyền riêng tư này áp dụng cho ứng dụng Bí ẩn tarot (sau đây gọi là "Ứng dụng") trên thiết bị di động, được tạo bởi Phạm Tiến Thắng (sau đây gọi là "Nhà Cung Cấp Dịch Vụ") như một dịch vụ có hỗ trợ quảng cáo. Dịch vụ này được cung cấp theo dạng “NGUYÊN TRẠNG”.</p><br>
+
+    <strong>Thu thập và sử dụng thông tin</strong>
+    <p>Ứng dụng thu thập thông tin khi bạn tải xuống và sử dụng. Thông tin này có thể bao gồm:</p>
+    <ul>
+        <li>Địa chỉ Giao thức Internet (IP) của thiết bị bạn</li>
+        <li>Các trang trong Ứng dụng bạn đã truy cập, thời gian và ngày truy cập, thời gian bạn dành cho các trang đó</li>
+        <li>Tổng thời gian sử dụng Ứng dụng</li>
+        <li>Hệ điều hành bạn sử dụng trên thiết bị di động</li>
+    </ul>
+    <p>Ứng dụng không thu thập thông tin vị trí chính xác của thiết bị di động của bạn.</p>
+
+    <p>Nhà Cung Cấp Dịch Vụ có thể sử dụng thông tin bạn cung cấp để liên hệ với bạn theo thời gian nhằm cung cấp thông tin quan trọng, thông báo cần thiết và chương trình tiếp thị.</p>
+
+    <p>Để mang lại trải nghiệm tốt hơn, trong khi sử dụng Ứng dụng, Nhà Cung Cấp Dịch Vụ có thể yêu cầu bạn cung cấp một số thông tin định danh cá nhân, bao gồm nhưng không giới hạn ở email, họ tên, tuổi, ngày sinh, số điện thoại. Thông tin này sẽ được lưu trữ và sử dụng như được mô tả trong chính sách quyền riêng tư này.</p><br>
+
+    <strong>Truy cập bên thứ ba</strong>
+    <p>Chỉ những dữ liệu được tổng hợp và ẩn danh sẽ được truyền định kỳ đến các dịch vụ bên ngoài để hỗ trợ Nhà Cung Cấp Dịch Vụ cải thiện Ứng dụng và dịch vụ của họ. Nhà Cung Cấp Dịch Vụ có thể chia sẻ thông tin của bạn với bên thứ ba theo các cách được mô tả trong chính sách này.</p>
+
+    <p>Lưu ý rằng Ứng dụng sử dụng các dịch vụ bên thứ ba có Chính sách Quyền riêng tư riêng để xử lý dữ liệu. Dưới đây là liên kết đến chính sách của các nhà cung cấp dịch vụ được sử dụng trong Ứng dụng:</p>
+    <ul>
+        <li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li>
+        <li><a href="https://support.google.com/admob/answer/6128543?hl=vi" target="_blank" rel="noopener noreferrer">AdMob</a></li>
+        <li><a href="https://firebase.google.com/support/privacy" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li>
+        <li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li>
+    </ul>
+
+    <p>Nhà Cung Cấp Dịch Vụ có thể tiết lộ Thông tin do Người dùng cung cấp và Thông tin được thu thập tự động:</p>
+    <ul>
+        <li>theo yêu cầu của pháp luật, chẳng hạn như tuân thủ lệnh triệu tập của tòa án hoặc quy trình pháp lý tương tự;</li>
+        <li>khi họ tin tưởng một cách thiện chí rằng việc tiết lộ là cần thiết để bảo vệ quyền lợi, sự an toàn của bạn hoặc người khác, điều tra gian lận hoặc phản hồi yêu cầu từ chính phủ;</li>
+        <li>với các nhà cung cấp dịch vụ đáng tin cậy làm việc thay mặt họ, không sử dụng thông tin một cách độc lập và đã đồng ý tuân thủ các quy định được nêu trong chính sách này.</li>
+    </ul><br>
+
+    <strong>Quyền từ chối</strong>
+    <p>Bạn có thể dừng toàn bộ việc thu thập thông tin của Ứng dụng bằng cách gỡ cài đặt nó. Bạn có thể sử dụng quy trình gỡ cài đặt chuẩn có sẵn trong thiết bị hoặc qua kho ứng dụng.</p><br>
+
+    <strong>Chính sách lưu giữ dữ liệu</strong>
+    <p>Nhà Cung Cấp Dịch Vụ sẽ giữ lại dữ liệu do Người dùng cung cấp trong thời gian bạn sử dụng Ứng dụng và một thời gian hợp lý sau đó. Nếu bạn muốn họ xóa dữ liệu bạn đã cung cấp qua Ứng dụng, hãy liên hệ họ qua email tarotwizard7777@gmail.com và họ sẽ phản hồi trong thời gian hợp lý.</p><br>
+
+    <strong>Trẻ em</strong>
+    <p>Ứng dụng không dành cho người dưới 13 tuổi.
+        Nhà Cung Cấp Dịch Vụ không cố ý thu thập thông tin định danh cá nhân từ trẻ em dưới 13 tuổi. Nếu phát hiện ra rằng một đứa trẻ dưới 13 đã cung cấp thông tin cá nhân, họ sẽ ngay lập tức xóa khỏi máy chủ. Nếu bạn là phụ huynh hoặc người giám hộ và nhận thấy con bạn đã cung cấp thông tin cá nhân, hãy liên hệ Nhà Cung Cấp Dịch Vụ (tarotwizard7777@gmail.com) để họ có thể xử lý phù hợp.</p><br>
+
+    <strong>Bảo mật</strong>
+    <p>Nhà Cung Cấp Dịch Vụ đặc biệt quan tâm đến việc bảo vệ sự riêng tư của bạn. Họ áp dụng các biện pháp bảo vệ vật lý, điện tử và quy trình để bảo vệ thông tin mà họ xử lý và lưu giữ.</p><br>
+
+    <strong>Thay đổi</strong>
+    <p>Chính sách Quyền riêng tư này có thể được cập nhật theo thời gian vì bất kỳ lý do gì. Nhà Cung Cấp Dịch Vụ sẽ thông báo cho bạn bằng cách cập nhật trang này. Bạn nên kiểm tra định kỳ vì việc tiếp tục sử dụng đồng nghĩa với sự đồng ý các thay đổi.</p><br>
+
+    <p>Chính sách quyền riêng tư này có hiệu lực từ ngày 2025-04-24</p><br>
+
+    <strong>Đồng ý của bạn</strong>
+    <p>Bằng việc sử dụng Ứng dụng, bạn đồng ý với việc xử lý thông tin của bạn như được mô tả trong chính sách này và các bản sửa đổi sau này.</p><br>
+
+    <strong>Liên hệ</strong>
+    <p>Nếu bạn có bất kỳ câu hỏi nào liên quan đến quyền riêng tư khi sử dụng Ứng dụng hoặc về cách hoạt động, hãy liên hệ với Nhà Cung Cấp Dịch Vụ qua email: tarotwizard7777@gmail.com.</p>
+</div>
+
+<script>
+    const btn = document.getElementById('translateButton');
+    const enContent = document.getElementById('content-en');
+    const viContent = document.getElementById('content-vi');
+
+    let isVietnamese = false;
+
+    btn.addEventListener('click', () => {
+        isVietnamese = !isVietnamese;
+        if (isVietnamese) {
+            enContent.style.display = 'none';
+            viContent.style.display = 'block';
+            btn.textContent = 'Translate to English';
+        } else {
+            viContent.style.display = 'none';
+            enContent.style.display = 'block';
+            btn.textContent = 'Dịch sang tiếng Việt';
+        }
+    });
+</script>
 </body>
 </html>
