--- a/tarot_app/delete_data.html
+++ b/tarot_app/delete_data.html
@@ -64,9 +64,9 @@
 </p>
 
 <h3 data-vi="4. Thời gian xử lý" data-en="4. Processing Time">4. Thời gian xử lý</h3>
-<p data-vi="Yêu cầu xóa tài khoản sẽ được xử lý trong vòng 7 ngày làm việc kể từ khi nhận được yêu cầu qua email."
-   data-en="Account deletion requests will be processed within 7 business days from the time the email request is received.">
-    Yêu cầu xóa tài khoản sẽ được xử lý trong vòng <strong>7 ngày làm việc</strong> kể từ khi nhận được yêu cầu qua email.
+<p data-vi="Yêu cầu xóa tài khoản sẽ được xử lý trong vòng 7 ngày làm việc kể từ khi nhận được yêu cầu qua email. Hoặc ngay lập tức kể từ khi thực hiện xóa thành công trong ứng dụng."
+   data-en="Account deletion requests will be processed within 7 business days from the time the email request is received. Or immediately from when deletion is successfully performed in the app.">
+    Yêu cầu xóa tài khoản sẽ được xử lý trong vòng <strong>7 ngày làm việc</strong> kể từ khi nhận được yêu cầu qua email. Hoặc ngay lập tức kể từ khi thực hiện xóa thành công trong ứng dụng.
 </p>
 
 <script>
